# oacquire

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  open_pdf_downloader.py  pyproject.toml  requirements.txt  zenodo.json
.github/workflows/: python-publish.yml
app/: requirements_app.txt  streamlit_app.py
oacquire/: __init__.py  cli.py  config.py  core.py  http.py  parsing.py  sources.py
tests/: test_api.py  test_parsing.py  test_sources.py
