[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oacquire"
version = "2.0.0"
description = "A multi-source corpus acquisition layer for agentic systematic reviews."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pedro C. Santana-Mancilla", email = "psantana@ucol.mx" },
]
keywords = [
    "systematic-review", "PRISMA", "open-access", "literature-review",
    "research-agents", "scholarly-communication", "text-mining", "RAG",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "pandas>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pyflakes", "ruff"]

[project.scripts]
oacquire = "oacquire.cli:main"

[project.urls]
Homepage = "https://github.com/pecesama/oacquire"
"Web app" = "https://oacquire.streamlit.app"
Repository = "https://github.com/pecesama/oacquire"
Issues = "https://github.com/pecesama/oacquire/issues"
Changelog = "https://github.com/pecesama/oacquire/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["oacquire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
